--- a/gb/16/11/3/n8455988.md
+++ b/gb/16/11/3/n8455988.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/puj222/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/puj222/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/puj222/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/puj222/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/puj222/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/puj222/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/puj222/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/puj222/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/puj222/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/puj222/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/puj222/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/puj222/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/puj222/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/puj222/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/puj222/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/puj222/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/puj222/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/puj222/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/puj222/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/puj222/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/puj222/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/puj222/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>房市研究：大台北仅内湖房价年增率见红</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2016年11月03日讯】房市研究单位住展杂志统计， 第3季大台北29个行政区中<ahref="https://github.com/puj222/djy/blob/master/gb/tag/%E6%96%B0%E6%88%90%E5%B1%8B.md#1">新成屋</a>、<ahref="https://github.com/puj222/djy/blob/master/gb/tag/%E9%A2%84%E5%94%AE%E5%B1%8B.md#1">预售屋</a>成交均价呈弱势，仅6个行政区价格较第2季走扬，若以年增幅来看，北市内湖区为唯一活口，估第4季可能翻黑。</p>
-<p>住展杂志企研室经理何世昌表示， 台北市第3季<ahref="https://github.com/puj222/djy/blob/master/gb/tag/%E6%96%B0%E6%88%90%E5%B1%8B.md#1">新成屋</a>、<ahref="https://github.com/puj222/djy/blob/master/gb/tag/%E9%A2%84%E5%94%AE%E5%B1%8B.md#1">预售屋</a>房价持续走弱，12个行政区中有8个下跌、1个持平、3个上涨(中山区、北投区、内湖区)。若以近一年房价为比较基准，只有内湖微涨0.13%，成为台北房市唯一“活口”，不过，10月起内湖已有建案祭出价格战，第4季房屋均价可能红翻黑。</p>
+<p>【大纪元2016年11月03日讯】房市研究单位住展杂志统计， 第3季大台北29个行政区中<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%B0%E6%88%90%E5%B1%8B.md#1">新成屋</a>、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A2%84%E5%94%AE%E5%B1%8B.md#1">预售屋</a>成交均价呈弱势，仅6个行政区价格较第2季走扬，若以年增幅来看，北市内湖区为唯一活口，估第4季可能翻黑。</p>
+<p>住展杂志企研室经理何世昌表示， 台北市第3季<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%96%B0%E6%88%90%E5%B1%8B.md#1">新成屋</a>、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%A2%84%E5%94%AE%E5%B1%8B.md#1">预售屋</a>房价持续走弱，12个行政区中有8个下跌、1个持平、3个上涨(中山区、北投区、内湖区)。若以近一年房价为比较基准，只有内湖微涨0.13%，成为台北房市唯一“活口”，不过，10月起内湖已有建案祭出价格战，第4季房屋均价可能红翻黑。</p>
 <p>近几季房价极度弱势的北投区，在相对高价新案进场后，第3季暂时止稳回弹，但回升幅度仅约0.44%，反弹力道并不够强。</p>
 <p>何世昌提醒，值得注意的是，北市预售屋房价自2014年第4季反转向下以来，最早主跌区在蛋黄区，但今年前3季蛋黄区预售案价格回档趋缓，换成蛋白区杀声隆隆。接下来几季应进一步观察，若蛋白区跌幅减少后，蛋黄区跌幅是否加大；若是如此，则应小心形成房价陷入“各区轮跌”的态势。</p>
 <p>在新北市部分，平均房价最高的永和区依然“涨多回吐”，第3季成交每坪约59.4万元，季跌约0.34%、年跌约11.21%，为新北各区唯一年跌逾1成的行政区，其次是中和区第3季均价跌破5字头，每坪约49.9万元，年跌幅约9.44%；同属新北市一线区域的板桥、新店、三重、新庄，房价同步下修，近一年跌幅均逾5%。</p>
@@ -19,42 +19,36 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/16/10/28/n8440248.md#1">北京控地价限房价 新房成交量大幅下滑</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/16/10/30/n8444284.md#1">控地价再限房价 北京再出手调控房价</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/16/11/1/n8448193.md#1">澳洲大量新公寓上市或致房价暴跌？</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/16/11/1/n8451479.md#1">纽估价局：奥克兰房价增幅降至低点</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/16/11/2/n8454272.md#1">陆官方智囊：一线城市房价报复性反弹或很大</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/17/n12039435.md#1">制造业服务业薪资补贴 经部估80万家庭受惠</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/17/n12039156.md#1">中经院估GDP仅保1 专家：不用太悲观</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/17/n12037844.md#1">陈吉仲：日本取代中国 成台湾第一大农产出口国</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/16/n12036367.md#1">疫情影响 台政府祭出税务纾困方案</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/16/n12036372.md#1">小额50万贷款 最快下周可申请</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/10/28/n8440248.md#1">北京控地价限房价 新房成交量大幅下滑</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/10/30/n8444284.md#1">控地价再限房价 北京再出手调控房价</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/11/1/n8448193.md#1">澳洲大量新公寓上市或致房价暴跌？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/11/1/n8451479.md#1">纽估价局：奥克兰房价增幅降至低点</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/11/2/n8454272.md#1">陆官方智囊：一线城市房价报复性反弹或很大</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678987.md#1">电价审议会今召开 立委吁涨工业大户</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678996.md#1">青年财务压力大 求职网：2成属“零存族”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678749.md#1">台积电高雄设厂通过初审 环团吁“自带绿电”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678690.md#1">俄乌战争冲击台经济成长 主计长：可保4</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678851.md#1">台使用牌照税开征 受疫情影响者可申请延缴</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/26/n10809856.md#1" target="_blank">严家伟：人间地狱，四川古蔺岔角滩</a></li><li><a href="https://github.com/puj222/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/14/n11111708.md#1" target="_blank">美国务院人权新报告 多次提中共迫害法轮功</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/7/n10464792.md#1" target="_blank">本真：《推背图》预言中美朝日大战及结局（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/24/n10804401.md#1" target="_blank">这些前中共警察所见证的奇迹</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/17/n12040446.md#1">【最新疫情4.18】中共也在调查 川普：等着瞧</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/18/n12041315.md#1">中共官媒记者称来自台湾 川普：马上处理掉他！</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/18/n12041341.md#1">西班牙发现中共病毒新症状：足部痘疹</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/19/n12043496.md#1">公安部副部长 前610副主任孙力军落马</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/19/n12042638.md#1">川普说赶走中共官媒记者 隔天简报会都不见了</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/17/n12040124.md#1">田蕊妮结束与TVB合约 网民：最正确选择</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/17/n12039902.md#1">范冰冰登海外时尚杂志封面 网民反应呈两极?</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/18/n12042304.md#1">居家隔离抗疫 李连杰小女儿自曝抑郁症复发</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/17/n12040402.md#1">因疫情中共再发限酬令 主角每集最多40万</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/19/n12044473.md#1">Lady Gaga吹捧谭德赛是巨星 网友批脑袋卡卡</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/16/n12034842.md#1">诸葛空城  “五音八卦阵”空而不虚</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/14/n12029129.md#1">【命理】怎样才能知道自己是好命？</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/17/n12038775.md#1">英国巨石阵是古代人的乐高玩具？</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/16/7/28/n8144082.md#1">古风悠悠：清介自矢的“岳青天”</a></li>
-<li><a href="https://github.com/puj222/djy/blob/master/gb/20/4/12/n12025238.md#1">【历史上的瘟疫】打垮拿破仑的重型瘟疫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/17/n7904818.md#1">组图：李冰冰入选戛纳红毯十大最美女星</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/19/n7908433.md#1">谢金燕泪崩暂别演艺圈 王彩桦心疼慰留</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/18/n7906277.md#1">王力宏40岁生日吓傻了 满屋星友贺寿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/17/n7902988.md#1">传陈妍希敲定婚期 7月19日北京嫁陈晓</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/19/n7910825.md#1">欧阳菲菲日籍丈夫病逝 享年77岁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/19/n7908663.md#1">传韩正想在十九大退休 江派即将失守上海？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/18/n7908165.md#1">传郭伯雄曾3次策划外逃 “化妆出逃”内幕曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/18/n7907941.md#1">【专访】前中情局局长谈中美情报之战</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/18/n7908142.md#1">百度丑闻愈曝愈多 整改掺水遭陆媒批评</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/5/19/n7910038.md#1">中共战机南海拦截美侦察机 美：不安全事件</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/puj222/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/puj222/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/3/n8455988.htm">房市研究：大台北仅内湖房价年增率见红</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/3/n8455988.htm">房市研究：大台北仅内湖房价年增率见红</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/puj222/djy/blob/master/gb/16/11/3/n8455988.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/puj222/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/puj222/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/puj222/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/puj222/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/puj222/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/16/11/3/n8455988.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
